--- a/machine.html
+++ b/machine.html
@@ -39,6 +39,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://so1.join.com/jobs/258010-machine-learning-engineer-m-f-x'>Job @ SO1 (Berlin): Machine Learning Engineer (m/f/x) | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/lightmatter/3078e929-7571-4ab5-b2df-b22aef74838c'>Lightmatter - Machine Learning Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
@@ -51,7 +55,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/tfgco/6fccee95-dadd-4426-a82e-74196c5c8ccc/apply'>TFG Co - Machine Learning Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tfgco/6fccee95-dadd-4426-a82e-74196c5c8ccc/apply'>TFG Co - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 13, 2019 ... Machine Learning Engineer. S?o Paulo. Engineering ? Data Engineering. Full-
 time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</p>
@@ -65,7 +69,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/centralway/job/o7aaafwl'>Numbrs Personal Finance AG Careers - Machine Learning Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/centralway/job/o7aaafwl'>Numbrs Personal Finance AG Careers - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -85,7 +89,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://definedcrowd.recruitee.com/o/backend-engineer-machine-learning-services'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://definedcrowd.recruitee.com/o/backend-engineer-machine-learning-services'>
       Backend Engineer ? Machine Learning Services - DefinedCrowd
     </a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
@@ -95,7 +99,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ecovadis/743999692157449-senior-machine-learning-data-f-m-paris'>EcoVadis Senior Machine Learning Data (F/M) - Paris | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ecovadis/743999692157449-senior-machine-learning-data-f-m-paris'>EcoVadis Senior Machine Learning Data (F/M) - Paris | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris Paris</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -111,7 +115,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://advertima.join.com/jobs/261690-computer-vision-and-machine-learning-engineer-m-f-in-tech-startup-zh-sg'>Computer Vision & Machine Learning Engineer (m/f) in Tech-Startup</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://advertima.join.com/jobs/261690-computer-vision-and-machine-learning-engineer-m-f-in-tech-startup-zh-sg'>Computer Vision & Machine Learning Engineer (m/f) in Tech-Startup</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Advertima AG has a job opening for Computer Vision & Machine Learning 
 Engineer (m/f) in Tech-Startup (ZH/SG) in St. Gallen (published: 27.06.2019).</p>
@@ -170,7 +174,7 @@ Jose (CA); Contract Senior Consultant, Adaptive Insights - Financial Planning?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/j/F23013344B'>SmartNews, Inc. - Jobs: Principal/Senior Staff Software Engineer, Applied Machine Learning - Apply online</a></h5> 
+<h5><a href='https://smartnews.workable.com/j/F23013344B'>SmartNews, Inc. - Jobs: Principal/Senior Staff Software Engineer, Applied Machine Learning - Apply online</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -339,7 +343,7 @@ Position] at Mercari, inc.</p>
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/labelbox/e2e7013b-1837-45ea-9537-f38a686bc6fe'>Labelbox - Machine Learning Support Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/labelbox/e2e7013b-1837-45ea-9537-f38a686bc6fe'>Labelbox - Machine Learning Support Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -383,11 +387,11 @@ technologies to solve a variety of problems; Translate user stories and business
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/houzz/00ba0880-760f-43b2-bb66-4ea5d893b049'>Houzz - Research Engineer | Machine Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/houzz/00ba0880-760f-43b2-bb66-4ea5d893b049'>Houzz - Research Engineer | Machine Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/houzz/78a7d404-5d5f-4d91-a1b0-3a0867fe3d46'>Houzz - Machine Learning Engineer | Personalization</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/houzz/78a7d404-5d5f-4d91-a1b0-3a0867fe3d46'>Houzz - Machine Learning Engineer | Personalization</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -405,15 +409,15 @@ Machine Learning. We are currently seeking a motivated human to join our team
 <p><span class="badge badge-light">Lenexa, KS</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://oneinamil.workable.com/j/00BAFA4E39'>OneinaMil - Jobs: Data Science Machine Learning Lead - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oneinamil.workable.com/j/00BAFA4E39'>OneinaMil - Jobs: Data Science Machine Learning Lead - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oneinamil.workable.com/j/609A9C018A'>OneinaMil - Jobs: Data Science Machine Learning Lead - Apply online</a></h5> 
+<h5><a href='https://oneinamil.workable.com/j/609A9C018A'>OneinaMil - Jobs: Data Science Machine Learning Lead - Apply online</a></h5> 
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://oneinamil.workable.com/j/C2D0CAAF5F'>OneinaMil - Jobs: Data Science Machine Learning Lead - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oneinamil.workable.com/j/C2D0CAAF5F'>OneinaMil - Jobs: Data Science Machine Learning Lead - Apply online</a></h5> 
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -421,11 +425,11 @@ Machine Learning. We are currently seeking a motivated human to join our team
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/splunk/job/ofYkafwr'>Splunk Careers - Machine Learning Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/splunk/job/ofYkafwr'>Splunk Careers - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/getdor/4f47f0ad-584a-4c77-8e4f-b8feae3dd663'>Dor - Lead Machine Learning Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/getdor/4f47f0ad-584a-4c77-8e4f-b8feae3dd663'>Dor - Lead Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... We've created a cloud-connected people counter that works for retailers of all 
 sizes, and allows our customers to view and analyze their foot-traffic data. We're?...</p>
@@ -443,7 +447,7 @@ and data scientists working inside MSK. Our mission is to transform how?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mercari.workable.com/j/DEB330A0B9'>Mercari, inc. - Jobs: Software Engineer, Machine Learning [New Graduate Position] - Apply online</a></h5> 
+<h5><a href='https://mercari.workable.com/j/DEB330A0B9'>Mercari, inc. - Jobs: Software Engineer, Machine Learning [New Graduate Position] - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
@@ -468,10 +472,6 @@ learning models and improve existing ones to enhance our network detection?...</
 <hr/>
 <h5><a href='https://jobs.lever.co/workfusion/67ddd885-308b-44be-938e-9b2ce7b2551f'>WorkFusion - Software Engineer (RPA &amp; Machine Learning)</a></h5> 
 <p><span class="badge badge-light">Minsk</span></p>
-<p>Posted on: 2019-07-11</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/forethought/e73b2546-7a59-49e4-a8a7-550296640e28'>Forethought - Software Engineer, Backend &amp; Machine Learning</a></h5> 
-<p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
 
